# nes_emulator_rust

./: .gitignore  .ignore  Cargo.toml  Dioxus.toml  README.md  cpu_instruction.csv  main.py  rustfmt.toml
src/: debug.rs  debugger_util.rs  macros.rs  main.rs  tests.rs
src/components/: bus.rs  clock.rs  dh2C02_ppu.rs  dh6502.rs  dh6502_cpu.rs  dh_bus.rs  dh_cartridge.rs  dh_cpu.rs  dh_ppu.rs  mod.rs  types.rs
src/components/dh_bus/: bus.rs  mod.rs  ram_stats.rs
src/components/dh_cartridge/: mirroring.rs  mod.rs
src/components/dh_cpu/: cpu.rs  mod.rs
src/components/dh_cpu/impls/: default.rs  display.rs  m6502_addr_modes.rs  m6502_opcodes.rs  mod.rs
src/components/dh_mappers/: mod.rs
src/components/dh_mappers/dh_m000/: m000.rs  mod.rs
src/components/dh_mappers/dh_m000/impls/: defaut.rs  mapper_fn.rs  mod.rs
src/components/dh_mappers/dh_mapper/: mapper.rs  mod.rs
src/components/dh_mappers/m000/: types.rs
src/components/dh_mappers/mapper_data/: types.rs
src/components/dh_mappers/traits/: mapper_fn.rs  mod.rs
src/components/dh_ppu/: ppu.rs
src/components/mappers/: m000.rs  mapper.rs  mod.rs
src/components/types/: addr_mnuemonic.rs  addr_modes.rs  ins_mneumonic.rs  opcode_mneumonics.rs  opcodes.rs
src/cpu/: bus.rs  clock.rs  dh6502.rs  types.rs
src/debug/: impls.rs  mod.rs
src/debug/impls/: views.rs
src/debug/styles/: grid_cell.rs  mod.rs
src/debug/types/: dh_debuggee_message.rs  mod.rs  utilities.rs
src/debug/types/dh_debuggee/: debuggee.rs  mod.rs
src/debug/widgets/: cpu_monitor_view.rs  grid_cell.rs  mod.rs  movable_nodes.rs
src/debug/widgets/ram_widgets/: mod.rs  read_hits.rs  write_hits.rs
src/debugger/: mod.rs  tui.rs  util.rs
src/devices/: bus.rs  event_bridge.rs  mod.rs
src/devices/cpu/: addressing_mode.rs  flags.rs  instruction.rs  lookup_table.rs  mod.rs  opcode.rs  processor.rs
src/util/: helper_func.rs  mod.rs
(+6 files in other folders)
