[package]
name = "nes_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# default = ["debug"] /// add this so that the 
default = ["debug"]
debug = [
  "dioxus",
  "dioxus-logger"
]

[dependencies]
anyhow = "1.0.71"
once_cell = "1.18.0"
dioxus = { version = "0.5", features = ["desktop"], optional = true}
dioxus-logger = {version = "0.5.0", optional = true}

[dev-dependencies]
tracing = {version = "0.1.40" }
