[package]
name = "nes_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# default = ["debug"] /// add this so that the 
default = ["debug"]
debug = ["iced"]

[dependencies]
anyhow = "1.0.71"
iced = { version = "0.12.1", features = ["debug", "advanced"], optional = true}
once_cell = "1.18.0"

[dev-dependencies]
tracing = {version = "0.1.40" }
rstest = "*"
